--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "date-fns": "^3.0.0",
     "nanoid": "^5.0.4",
-    "date-fns": "^3.0.0"
+    "supabase": "^2.58.5"
   },
   "devDependencies": {
     "@types/node": "^20.0.0"
