--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@promptzy/shared": "file:../shared",
+    "@supabase/supabase-js": "^2.39.0",
     "date-fns": "^3.6.0",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.263.1",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.21.0",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.1",
+    "supabase": "^2.58.5",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
