Major UI/UX Overhaul

--- a/packages/mobile/android/app/build.gradle
+++ b/packages/mobile/android/app/build.gradle
@@ -89,6 +89,12 @@ android {
             }
         }
     }
+
+    externalNativeBuild {
+        cmake {
+            buildStagingDirectory file("C:/cxx")
+        }
+    }
     
     // Workaround for path length on Windows
     packagingOptions {
