--- a/packages/mobile/android/build.gradle
+++ b/packages/mobile/android/build.gradle
@@ -18,4 +18,8 @@ buildscript {
     }
 }
 
+subprojects {
+    buildDir = "C:/b/${project.name}"
+}
+
 apply plugin: "com.facebook.react.rootproject"
