--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@promptzy/shared": "file:../shared",
     "@supabase/supabase-js": "^2.39.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.23.24",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.263.1",
     "nanoid": "^5.0.4",
@@ -24,6 +28,8 @@
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.1",
     "supabase": "^2.58.5",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
